# procflow

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  ETHICS.md  LICENSE-MIT  README.md  skills-lock.json
crates/procflow/: Cargo.toml
crates/procflow-common/: Cargo.toml
crates/procflow-common/src/: lib.rs
crates/procflow-ebpf/: Cargo.toml
crates/procflow-ebpf/.cargo/: config.toml
crates/procflow-ebpf/src/: bindings.rs  main.rs
crates/procflow-ipc/: Cargo.toml  build.rs
crates/procflow-ipc/proto/procflow/v1/: procflow.proto
crates/procflow-ipc/src/: lib.rs
crates/procflow/src/: main.rs
crates/procflowd/: Cargo.toml
crates/procflowd/migrations/: 0001_init.sql
crates/procflowd/src/: collector.rs  enrich.rs  lib.rs  main.rs  server.rs  store.rs
crates/procflowd/tests/: ipc.rs
docs/adr/: 0001-duckdb-store-owned-by-daemon.md  0002-payload-bytes-no-endpoint-dimension.md  0003-local-time-day-month-boundaries.md  0004-identity-natural-key-normalized-cmdline.md  0005-tiered-rollup-storage.md  0006-ebpf-socket-hooks-kernel-counts-pid.md  0007-pid-identity-enrichment-dead-pid-race.md  0008-ipc-framed-protobuf-typed-rpc-streaming.md  0009-global-collection-uid-scoped-viewing.md  0010-cli-surface-subcommands-map-to-ipc-verbs.md  0011-daemon-packaging-least-privilege-systemd.md  0012-dual-license-mit-or-apache-bpf-dual-mit-gpl.md
docs/agents/: issue-tracker.md
scripts/: build-ebpf.sh
