[package]
name = "procflow-common"
description = "no_std types shared between the eBPF collector and userspace (map ABI)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Userspace side: implements aya::Pod for the map types.
user = ["dep:aya"]

[dependencies]
aya = { version = "0.14", optional = true }
