[package]
name = "procflow"
description = "procflow CLI: query per-process network traffic history"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
procflow-ipc = { path = "../procflow-ipc" }
